<resources>
    <string name="app_name">TuristicApp</string>
    <string name="log_in">Iniciar sesion</string>
    <string name="sign_up">Registrarse</string>
    <string name="password">Contraseña</string>
    <string name="username">Nombre de usuario</string>
    <string name="crear_cuenta">crear cuenta</string>
    <string name="confirma_tu_contrase_a">confirma tu contraseña</string>
    <string name="propietary">Propietario?</string>
    <string name="more_info">more info</string>
    <string name="edit_touristic_place">edit touristic place</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="go_back">Go Back</string>
    <string name="rellenoDescripcion">relleno para la descripción, luego ponemos la descripción real completa :)</string>
    <string name="view_reviews">ver reseñas</string>
    <string name="review_filler">reseña de relleno :P</string>
    <string name="credencialesInvalidas">Error, credenciales no válidas, intente de nuevo</string>
    <string name="noCamposBlanco">Error, no puedes dejar campos en blanco</string>
    <string name="error_cargando_datos_lo_sentimos">Error cargando datos, lo sentimos</string>

    <string name="snackbar_dismiss_label">Cerrar</string>
    <string name="camara_button_name">Camara</string>
    <string name="gallery_button_name">Galeria</string>
    <string name="video_switch_label">Video</string>
    <string name="take">Tomar</string>
    <string name="pick_from_gallery">Escoger de Galeria</string>
    <string name="map_button_name">Mapa</string>
    <string name="label_search">Buscar Lugar</string>

    <string name="experiencia">Registrar Experiencia</string>
    <string name="resena_agregada">Se ha agregado tu reseña! :)</string>
    <string name="resena_actualizada">Se ha actualizado tu reseña! :)</string>
    <string name="add_place">add Place</string>
    <string name="llenar_2_campos">Error, debes cambiar algo y los campos no pueden quedar vacíos</string>
    <string name="datos_del_lugar_actualizados">Datos del lugar actualizados</string>
    <string name="nombre_del_lugar">Nombre del Lugar</string>

</resources>